--- a/views/campground/show.ejs
+++ b/views/campground/show.ejs
@@ -28,7 +28,7 @@
         </li>
       </ul>
     </div>
-    <div>
+    <div class="mb-3 border-bottom pt-1">
       <ul class="" style="display: flex; gap: 30px">
         <li class="list-group-item" style="display: inline-flex">
           <a href="/campgrounds/<%= campgrounds._id %>/edit" class="card-link"
@@ -39,6 +39,25 @@
           <a href="/campgrounds" class="card-link">All Campground</a>
         </li>
       </ul>
+    </div>
+    <div class="mb-3">
+      <form action="/campgrounds">
+        <div>
+          <label class="label" for="rating">Rating</label>
+          <input
+            type="range"
+            id="rating"
+            min="1"
+            max="5"
+            name="review[rating]"
+          />
+        </div>
+        <div class="mt-3">
+          <label class="label" for="revBody">Type in your Feedback</label>
+          <input class="form-control"" type="textarea" id="revBody"
+          name="review[body]" row=3 col=40/>
+        </div>
+      </form>
     </div>
   </div>
 </div>
