--- a/views/campground/show.ejs
+++ b/views/campground/show.ejs
@@ -1,6 +1,5 @@
 <%layout('/layout/boilerplate.ejs') %>
-<link rel='stylesheet' href="/stylesheets/starability-heartbeat.css">
-
+<link rel="stylesheet" href="/stylesheets/starability-heartbeat.css" />
 
 <script>
   const mapBoxToken='<%-process.env.MAPBOX_ACCESS_TOKEN%>';
@@ -9,41 +8,74 @@
 
 <div class="row">
   <div
-  class="card  col-sm-6 mb-3 border border-dark p-3 mb-sm-0"
-  style="width: 35rem">
-  <div id="carouselExampleIndicators" class="carousel slide">
-   <% if(campgrounds.images.length>1) { %>
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-   <% } %>
-    <div class="carousel-inner">
-    <% campgrounds.images.forEach(function(img,i){ %>
-      <div class="carousel-item <%= i===0?'active':''%>">
-        <img class="d-block w-100" src="<%= img.url %>" style="max-height: 400px; 
-            max-width: 100%; 
-            overflow: auto; 
-            box-sizing: border-box;" alt="slide">
+    class="card col-sm-6 mb-3 border border-dark p-3 mb-sm-0"
+    style="width: 35rem"
+  >
+    <div id="carouselExampleIndicators" class="carousel slide">
+      <% if(campgrounds.images.length>1) { %>
+      <div class="carousel-indicators">
+        <button
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="0"
+          class="active"
+          aria-current="true"
+          aria-label="Slide 1"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="1"
+          aria-label="Slide 2"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="2"
+          aria-label="Slide 3"
+        ></button>
       </div>
-      <% }); %>
-    </div>
-    
-    <% if(campgrounds.images.length>1) { %>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-    <% } %>
-  </div>
+      <% } %>
+      <div class="carousel-inner">
+        <% campgrounds.images.forEach(function(img,i){ %>
+        <div class="carousel-item <%= i===0?'active':''%>">
+          <img
+            class="d-block w-100"
+            src="<%= img.url %>"
+            style="
+              max-height: 400px;
+              max-width: 100%;
+              overflow: auto;
+              box-sizing: border-box;
+            "
+            alt="slide"
+          />
+        </div>
+        <% }); %>
+      </div>
 
- 
- 
+      <% if(campgrounds.images.length>1) { %>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+      <% } %>
+    </div>
+
     <div class="card-body">
       <h1 class="card-title text-center"><%=campgrounds.title %></h1>
     </div>
@@ -53,9 +85,11 @@
       <li class="list-group-item">
         <p class="card-text"><%= campgrounds.description %></p>
       </li>
-      <li class="list-group-item bg-light">Submitted by <%= campgrounds.author.username%></li>
+      <li class="list-group-item bg-light">
+        Submitted by <%= campgrounds.author.username%>
+      </li>
     </ul>
-  <% if(currentUser&&campgrounds.author.equals(currentUser._id)) { %>
+    <% if(currentUser&&campgrounds.author.equals(currentUser._id)) { %>
 
     <div class="card-body">
       <ul class="list-group list-group-flush ml-0">
@@ -71,77 +105,117 @@
     </div>
     <% } %>
     <div class="mb-3 border-bottom pt-1">
-      <ul class="list-group-item mt-2" style="display: flex;">
-        <li class="" style="display: inline-flex;margin-right:15px;">
-          <a href="/campgrounds/<%= campgrounds._id %>/edit" class="btn btn-warning card-link "
+      <ul class="list-group-item mt-2" style="display: flex">
+        <li class="" style="display: inline-flex; margin-right: 15px">
+          <a
+            href="/campgrounds/<%= campgrounds._id %>/edit"
+            class="btn btn-warning card-link"
             >Edit Campgrounds</a
           >
         </li>
         <li class="list-group-item" style="display: inline-flex">
-          <a href="/campgrounds" class="card-link btn btn-dark">All Campground</a>
+          <a href="/campgrounds" class="card-link btn btn-dark"
+            >All Campground</a
+          >
         </li>
       </ul>
     </div>
-   </div>
-    
-    <div class="col-md-6 mb-3 card">
-    <div id='map' class="card mb-3"></div>
-     <% if(currentUser){ %>
-      <h4 ><b>Leave A Review</b></h4>
-      <form
-        action="/campgrounds/<%= campgrounds._id %>/reviews"
-        class="needs-validation"
-        method="POST"
-        novalidate
-      >
+  </div>
+
+  <div class="col-md-6 mb-3 card">
+    <div id="map" class="card mb-3"></div>
+    <% if(currentUser){ %>
+    <h4><b>Leave A Review</b></h4>
+    <form
+      action="/campgrounds/<%= campgrounds._id %>/reviews"
+      class="needs-validation"
+      method="POST"
+      novalidate
+    >
       <div class="mt-2">
-      <fieldset class="starability-coinFlip">
-        <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0" checked aria-label="No rating." />
-        <input type="radio" id="first-rate1" name="review[rating]" value="1" />
-        <label for="first-rate1" title="Terrible">1 star</label>
-        <input type="radio" id="first-rate2" name="review[rating]" value="2" />
-        <label for="first-rate2" title="Not good">2 stars</label>
-        <input type="radio" id="first-rate3" name="review[rating]" value="3" />
-        <label for="first-rate3" title="Average">3 stars</label>
-        <input type="radio" id="first-rate4" name="review[rating]" value="4" />
-        <label for="first-rate4" title="Very good">4 stars</label>
-        <input type="radio" id="first-rate5" name="review[rating]" value="5" />
-        <label for="first-rate5" title="Amazing">5 stars</label>
-      </fieldset>
-    </div>
-        <div class="mt-3">
-          <label class="label" for="revBody">Type in your Feedback</label>
-          <textarea class="form-control"" id="revBody"
-            name="review[body]" row=3 col=40  required ></textarea>
-            <div class="valid-feedback">Please fill some data </div>
-        </div>
-        <div class="mt-2">
-          <button class="btn btn-success mb-3">submit</button>
-        </div>
-      </form>
-      <% } %>
-
-        <% for(let campground of campgrounds.reviews) { %>
-      
-      <div class="card mb-2">   
-          <div class="card-body">
-            <h5 h5="card-title"><%=campground.author.username%></h5>
-             <div style="display:flex">
-            
-            <h5 class="starability-result" data-rating="3">
-              Rated: 3 stars
-            </h5>
-
-            <h6 h5="card-subtitle mb-2" style="margin-left:auto;">Rating: <%=campground.rating%></h6>
-            </div>
-            <p class="card-text">Review: <%=campground.body%></p>
-          </div>
+        <fieldset class="starability-coinFlip">
+          <input
+            type="radio"
+            id="no-rate"
+            class="input-no-rate"
+            name="review[rating]"
+            value="0"
+            checked
+            aria-label="No rating."
+          />
+          <input
+            type="radio"
+            id="first-rate1"
+            name="review[rating]"
+            value="1"
+          />
+          <label for="first-rate1" title="Terrible">1 star</label>
+          <input
+            type="radio"
+            id="first-rate2"
+            name="review[rating]"
+            value="2"
+          />
+          <label for="first-rate2" title="Not good">2 stars</label>
+          <input
+            type="radio"
+            id="first-rate3"
+            name="review[rating]"
+            value="3"
+          />
+          <label for="first-rate3" title="Average">3 stars</label>
+          <input
+            type="radio"
+            id="first-rate4"
+            name="review[rating]"
+            value="4"
+          />
+          <label for="first-rate4" title="Very good">4 stars</label>
+          <input
+            type="radio"
+            id="first-rate5"
+            name="review[rating]"
+            value="5"
+          />
+          <label for="first-rate5" title="Amazing">5 stars</label>
+        </fieldset>
       </div>
-        
-      <% } %>
-    
+      <div class="mt-3">
+        <label class="label" for="revBody">Type in your Feedback</label>
+        <textarea
+          class="form-control"
+          id="revBody"
+          name="review[body]"
+          row="3"
+          col="40"
+          required
+        ></textarea>
+        <div class="valid-feedback">Please fill some data</div>
+      </div>
+      <div class="mt-2">
+        <button class="btn btn-success mb-3">submit</button>
+      </div>
+    </form>
+    <% } %> <% for(let campground of campgrounds.reviews) { %>
+
+    <div class="card mb-2">
+      <div class="card-body">
+        <h5 h5="card-title"><%=campground.author.username%></h5>
+        <div style="display: flex">
+          <h5 class="starability-result" data-rating="<%=campground.rating%>">
+            Rated:<%=campground.rating %>stars
+          </h5>
+
+          <h6 h5="card-subtitle mb-2" style="margin-left: auto">
+            Rating: <%=campground.rating%>
+          </h6>
+        </div>
+        <p class="card-text">Review: <%=campground.body%></p>
+      </div>
     </div>
-  
+
+    <% } %>
+  </div>
 </div>
 <script src="/javascripts/showPageBox.js"></script>
 
@@ -172,4 +246,3 @@
     );
   })();
 </script>
-
