--- a/views/campground/new.ejs
+++ b/views/campground/new.ejs
@@ -36,17 +36,14 @@
 
       <div class="input-group mb-3">
         <div class="custom-file">
-          <input type="file" class="custom-file-input" id="inputGroupFile02" />
-          <label
-            class="custom-file-label"
-            for="inputGroupFile02"
-            aria-describedby="inputGroupFileAddon02"
-          ></label>
-        </div>
-        <div class="input-group-append">
-          <span class="input-group-text" id="inputGroupFileAddon02"
-            >Upload</span
-          >
+          <input
+            type="file"
+            class="custom-file-input"
+            id="image"
+            name="image"
+            multiple
+          />
+          <label class="custom-file-label" for="image"></label>
         </div>
       </div>
       <!--
